Fixing Apis according to further usecases
